--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
-server.port=8080
+server.port=8888
 spring.datasource.url=jdbc:mysql://119.29.188.241:3306/workbgm
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=7e7f2d5
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
